@@ -1,0 +1,79 @@
+# $NetBSD: Makefile.common,v 1.1 2003/06/30 07:29:00 jlam Exp $
+
+DISTNAME=       xlockmore-5.08.1
+CATEGORIES=	x11
+MASTER_SITES=	ftp://ftp.tux.org/pub/tux/bagleyd/xlockmore/ \
+		${MASTER_SITE_XCONTRIB:=applications/}
+EXTRACT_SUFX=	.tar.bz2
+
+MAINTAINER=	hubertf@netbsd.org
+HOMEPAGE=	http://www.tux.org/~bagleyd/xlockmore.html
+
+CONFLICTS+=	xlockmore-[0-9]* xlockmore-lite-[0-9]*
+
+DISTINFO_FILE?=		${.CURDIR}/../xlockmore/distinfo
+PATCHDIR?=		${.CURDIR}/../xlockmore/patches
+PLIST_SRC?=		${.CURDIR}/../xlockmore/PLIST
+
+USE_BUILDLINK2=		YES
+USE_X11BASE=		YES
+
+.include "../../mk/bsd.prefs.mk"
+
+XLOCK_SOUNDDIR=		${PREFIX}/lib/X11/xlock/sounds
+XLOCK_MODULEDIR=	${PREFIX}/lib/X11/xlock/modules
+
+.if !exists(${X11BASE}/lib/libXdpms.a)
+XLOCK_NO_DPMS=		YES
+.endif
+
+DEFINES+=		-DDEF_MODULEPATH=\"${XLOCK_MODULEDIR}\"
+CPPFLAGS+=		${DEFINES}
+CXXFLAGS+=		${DEFINES}
+
+GNU_CONFIGURE=		YES
+CONFIGURE_ARGS+=        --without-motif
+CONFIGURE_ARGS+=        --without-editres
+CONFIGURE_ARGS+=        --without-dtsaver
+CONFIGURE_ARGS+=        --without-rplay
+CONFIGURE_ARGS+=        --without-nas
+CONFIGURE_ARGS+=        --without-gtk
+
+.if ${OPSYS} == "NetBSD"
+.  if defined(USE_OSS)
+.    include "../../audio/oss/buildlink2.mk"
+BUILDLINK_DEPENDS.oss=	oss-[0-9]*
+XLOCK_AUDIOPLAY?=	${BUILDLINK_PREFIX.oss}/bin/ossplay
+.  else
+XLOCK_AUDIOPLAY?=	/usr/bin/audioplay
+.  endif
+CONFIGURE_ARGS+=	--enable-def-play="${XLOCK_AUDIOPLAY}"
+.endif
+
+.if defined(XLOCK_NO_DPMS) && !empty(XLOCK_NO_DPMS:M[yY][eE][sS])
+CONFIGURE_ARGS+=	--without-dpms
+.endif
+
+# Set the complete paths to the sound files and set the default xlock
+# mode/screensaver.
+#
+post-patch:
+	cd ${WRKSRC}/xlock;						\
+	${MV} -f XLock.ad XLock.ad.presed;				\
+	${SED}	-e "s|/usr/lib/|${PREFIX}/lib/|g"			\
+		XLock.ad.presed > XLock.ad;				\
+	${RM} -f XLock.ad.presed
+.if defined(XLOCK_DEFAULT_MODE) && !empty(XLOCK_DEFAULT_MODE)
+	cd ${WRKSRC}/xlock;						\
+	${MV} -f XLock.ad XLock.ad.presed;				\
+		-e "s|^\(Xlock.mode:[ 	]*\).*|\1${XLOCK_DEFAULT_MODE}|" \
+		XLock.ad.presed > XLock.ad;				\
+	${RM} -f XLock.ad.presed
+.endif
+
+post-install:
+	${INSTALL_DATA_DIR} ${XLOCK_SOUNDDIR}
+	cd ${WRKSRC}/sounds;						\
+	for file in *.au; do						\
+		${INSTALL_DATA} $$file ${XLOCK_SOUNDDIR};		\
+	done
